# Ballistics

./: .gitmodules  CMakeLists.txt  README.md
resources/atmosphere/: GOST4401_81.h  SW-Last5Years.csv
resources/gravity/: data.txt
resources/orbits/: KeplerianAndCartesian.csv
resources/rotation/: earth_rotation.csv
src/: CMakeLists.txt
src/ballistics/atmosphere/: Density.hpp
src/ballistics/ephemeris/: Ephemeris.hpp
src/ballistics/forces/: DragForce.hpp  EarthGravityForce.hpp  ForceCalculator.hpp  ThirdBodyGravityForce.hpp
src/ballistics/forces/solar_radiation/: IndependentShadow.hpp  PenumbraShadow.cpp  PenumbraShadow.hpp  SolarForce.hpp  SolarPressure.hpp  SphereModel.hpp  TSI.hpp
src/ballistics/frame_converter/: FrameConverter.hpp
src/ballistics/numerical_methods/: explicit_runge_kutta.hpp
src/ballistics/orbit_converter/: OrbitConverter.hpp
src/ballistics/orbits/: CartesianOrbit.hpp  KeplerianOrbit.hpp
src/ballistics/rhs/: CentralGravity.hpp  RightPart.hpp
src/ballistics/time/: DutContainer.hpp  Time.hpp  TimeConverter.hpp
src/ballistics/types/: Quaternion.hpp  Vector.hpp  types.hpp
src/ballistics/utils/: Interpolation.hpp  csvParser.hpp  earth_rotation_result.hpp  ephems.hpp  penumbra_shadow.csv
src/rhs/: CentralGravity.hpp  RHS.hpp
tests/: CMakeLists.txt  test_Atmosphere.cpp  test_Ephemeris.cpp  test_FrameConverter.cpp  test_Gravity.cpp  test_RungeKutta.cpp  test_Shadow.cpp  test_Time.cpp  test_TimeConverter.cpp
tests/ballistics/atmosphere/: test_Atmosphere.cpp
tests/ballistics/ephemeris/: test_Ephemeris.cpp
(+5 files in other folders)
